# harboor-sweep-tui

./: Cargo.toml  LICENSE  README.md  harboor-sweep.nuspec
.github/workflows/: ci.yml
snap/: snapcraft.yaml
src/: commands.rs  event_tracker.rs  explorer.rs  main.rs  tracker.rs
src/common/: mod.rs
src/model/: common.rs  mod.rs  unix.rs  windows.rs
src/portwatch/: common.rs  export.rs  mod.rs  snapshot.rs  tracker.rs
src/ui/: footer_component.rs  keybindings_component.rs  kill_process_component.rs  mod.rs  process_search_component.rs  process_table_component.rs  snapshots_component.rs  theme.rs
src/unix/: linux.rs  mod.rs
src/util/: layout.rs  mod.rs  width.rs
src/windows/: mod.rs  windows.rs
tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1
