[package]
name = "harboor-sweep-tui"
version = "1.0.0"
description = "Cross-platform tool to identify and manage active ports and their processes"
authors = ["lukaj"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
windows = { version = "0.59.0", features = ["Win32_NetworkManagement_IpHelper", "Win32_System_Threading", "Win32_Foundation", "Win32_System_ProcessStatus"] }
serde_json = "1.0.137"
unicode-width = "0.2.0"
itertools = "0.14.0"
