cargo-features = ["edition2024"]

[package]
name = "harboor-sweep"
version = "1.0.0"
description = "Cross-platform tool to identify and manage active ports and their processes. Supports Linux, macOS, and Windows."
authors = ["LazyDoomSlayer <lazydoomslayer@gmail.com>"]
keywords = [
    "tui", "terminal", "network", "ports", "cli",
]
categories = [
    "command-line-utilities",
    "network-programming",
]
repository = "https://github.com/LazyDoomSlayer/harboor-sweep-tui"
homepage = "https://github.com/LazyDoomSlayer/harboor-sweep-tui#readme"
readme = "README.md"
license = "MIT"
edition = "2024"

[[bin]]
name = "harboor-sweep"
path = "src/main.rs"

[[bin]]
name = "hs"
path = "src/main.rs"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.5"
serde = { version = "1", features = ["derive"] }
windows = { version = "0.59.0", features = ["Win32_NetworkManagement_IpHelper", "Win32_System_Threading", "Win32_Foundation", "Win32_System_ProcessStatus"] }
unicode-width = "0.2.0"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
csv = "1.3.1"
chrono = { version = "0.4", features = ["serde"] }


[package.metadata.rpm]
maintainer = "LazyDoomSlayer <lazydoomslayer@gmail.com>"
copyright = "2025, LazyDoomSlayer <lazydoomslayer@gmail.com>"
license-file = ["LICENSE"]
extended-description = """Cross-platform tool to identify and manage active ports and their processes. Supports Linux, macOS, and Windows."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/harboor-sweep-tui", "usr/bin", "755"],
    ["README.md", "usrs/share/doc/harboor-sweep-tui/README", "644"]
]


[package.metadata.deb]
maintainer = "LazyDoomSlayer <lazydoomslayer@gmail.com>"
copyright = "2025, LazyDoomSlayer <lazydoomslayer@gmail.com>"
license-file = ["LICENSE"]
extended-description = """Cross-platform tool to identify and manage active ports and their processes. Supports Linux, macOS, and Windows."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/harboor-sweep-tui", "usr/bin", "755"],
    ["README.md", "usrs/share/doc/harboor-sweep-tui/README", "644"]
]
